# More keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["temperature", "push-button-led"]
resolver = "2"

[workspace.package]
authors = ["Nikita Demin <krawitzzz@hotmail.com>"]

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[profile.release]
opt-level = "s"

[workspace.dependencies]
anyhow = { version = "1.0.93" }
embedded-hal = { version = "1.0.0" }
esp-idf-svc = { version = "0.49.1", features = [
    "critical-section",
    "embassy-time-driver",
    "embassy-sync",
] }
log = { version = "0.4.22" }
