[package]
name = "temperature"
version = "1.0.0"
authors.workspace = true
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "temperature"
harness = false

[features]
default = []
experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = { workspace = true }
embedded-hal = { workspace = true }
esp-idf-svc = { workspace = true }
dht-sensor = { version = "0.2.1" }
log = { workspace = true }

[build-dependencies]
embuild = { version = "0.32.0" }
cc = { version = "=1.1.30" }     # Necessary until a new version of `esp-idf-sys` is released
